Fixed: Bug 33928 - [L3] Sort option is not getting ticked on mobile devices

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -4323,7 +4323,18 @@ input.flat-input {
             .vertical-gradient(@dropdown-link-active-bg, darken(@dropdown-link-active-bg, 5%));
         }
     }
+    .android {
+         .custom-dropdown.dropdown-menu {
+            /* active state must be disabled due to messed up active classes on android */
+            &.dropdown-menu li > a:active {
+                color: inherit;
+                text-decoration: none;
+                outline: 0;
+                background: none;
 
+            }
+        }
+    }
     //** blur style for body when mobile custom menus are shown **/
     .ios {
         #io-ox-core {
